moved page demos

--- a/web/app/templates/pages.html
+++ b/web/app/templates/pages.html
@@ -1,9 +1,17 @@
+<!--
+DEMO
+
+This is what I believe Sam was talking about when he was mentioning how he wanted the layout to look like. 
+
+This is me trying to fool around with that and build something.
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title>Pages Demo</title>
-	<script src="pages.js"></script>
-	<link rel="stylesheet" href="pages.css">
+	<script src="../static/js/pages.js"></script>
+	<link rel="stylesheet" href="../static/css/pages.css">
 </head>
 <body>
   <div class="demo__info">
@@ -21,7 +29,7 @@
         <div >
 
 
-        	<iframe src="../Feature Selection/selection.html"></iframe>
+        	<iframe src="selection.html"></iframe>
 	
 
         </div>
