--- a/web/app/templates/selection.html
+++ b/web/app/templates/selection.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="/static/css/selection.css">
-	<script src="/static/js/selection.js"></script>
+	<link rel="stylesheet" href="../static/css/selection.css">
+	<script src="../static/js/selection.js"></script>
 </head>
 <body onload="init()">
 
