silly image changes

--- a/web/app/templates/pages.html
+++ b/web/app/templates/pages.html
@@ -35,7 +35,7 @@ This is me trying to fool around with that and build something.
         </div>
       </div>
       <div class="parallax__layer parallax__layer--back">
-        <div class="title"><img class="opaque" src="http://www.tripinfo.com/maps/NY-NewYork.gif"/></div>
+        <div><img class="opaque" style="width:150%;left:-100%" src="http://www.tripinfo.com/maps/NY-NewYork.gif"/></div>
       </div>
     </div>
     <div id="group3" class="parallax__group">
