moving thigs around

--- a/web/app/templates/pages.html
+++ b/web/app/templates/pages.html
@@ -21,21 +21,19 @@ This is me trying to fool around with that and build something.
   <div class="parallax">
     <div id="group1" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
-        <div class="title">Stop and Frisk</div>
+        <iframe src="selection.html"></iframe>
       </div>
     </div>
     <div id="group2" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
         <div >
-
-
-        	<iframe src="selection.html"></iframe>
-	
+	         <div class="title">Another Page</div>
 
         </div>
       </div>
       <div class="parallax__layer parallax__layer--back">
-        <div><img class="opaque" style="width:150%;left:-100%" src="http://www.tripinfo.com/maps/NY-NewYork.gif"/></div>
+        <!--<div><img class="opaque" style="width:150%;left:-100%" src="http://www.tripinfo.com/maps/NY-NewYork.gif"/></div>-->
+        <div class="title">Behind</div>
       </div>
     </div>
     <div id="group3" class="parallax__group">
