--- a/web/app/templates/selection.html
+++ b/web/app/templates/selection.html
@@ -6,11 +6,8 @@
 </head>
 <body onload="init()">
 
-	<h2>NY Stop & Frisk</h2>
-	<h3>Selection Demo</h3>
-
 	<div id="identity">
-		I am... <span id="list"/>
+		<span id="iam">I am a... </span><span id="list"/>
 	</div>
 	<div id="to-select">
 		<form action="#">
