--- a/web/app/static/css/selection.css
+++ b/web/app/static/css/selection.css
@@ -1,5 +1,5 @@
 html{
-  font-family: sans-serif;
+  font-family: 'Open Sans';
 }
 
 fieldset {
@@ -11,14 +11,45 @@ label {
 }
 
 button.cancel{
-  background:none;
+  background:#ffc671;
   border:none;
-  margin-left:5px;
+  margin-left:8px;
   padding:0;
-  color:red;
+  color:#ec6319;
+  font-size: 80%;
+  font-weight: bold;
+
+  height: 25px;
+  width: 23px;
+
+  padding-bottom: 28px;
 }
 
 .button_style{
+  padding:5px;
+  padding-left: 8px;
+  padding-right: 8px;
+  margin: 2px;
+  margin-left: 8px;
+  margin-right: 10px;
+  margin-bottom: 15px;
+  
+  -webkit-box-shadow: 0 7px 0 #ffc771;
+  -moz-box-shadow: 0 7px 0 #ffc771;
+  box-shadow: 0 7px 0 #ffc771;
+ /* border-bottom: thick solid #ffc771;*/
+  background: #fff59c;
+  border:none;
+  outline:none;
+  display: inline-block;
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  appearance:none;
+  cursor:pointer;
+}
+
+
+/*.button_style{
   padding:5px;
   margin: 2px;
   -webkit-border-radius:4px;
@@ -36,20 +67,35 @@ button.cancel{
   -moz-appearance:none;
   appearance:none;
   cursor:pointer;
-}
+}*/
 
 select.button_style {
   padding:3px;
-  margin: 1px;
+  margin: 5px;
+
+  -webkit-box-shadow: 0 4px 0 #ffc771;
+  -moz-box-shadow: 0 4px 0 #ffc771;
+  box-shadow: 0 4px 0 #ffc771;
 
   position: relative;
 }
 
+/*#iam{
+  font-size: 200%;
+}*/
+
 #identity{
   margin-bottom: 100px;
+  font-size: 190%;
 }
 
-#to-select{
+
+/*#to-select{
   border-top: 1px dotted #888;
   border-bottom: 1px dotted #888;
+}*/
+
+#to-select{
+  background: #65e3af;
+  padding-bottom: 30px;
 }
