--- a/web/app/static/css/selection.css
+++ b/web/app/static/css/selection.css
@@ -16,13 +16,13 @@ button.cancel{
   margin-left:8px;
   padding:0;
   color:#ec6319;
-  font-size: 80%;
+  font-size: 30px;
   font-weight: bold;
 
   height: 25px;
   width: 23px;
 
-  padding-bottom: 28px;
+  padding-bottom: 35px;
 }
 
 .button_style{
@@ -86,7 +86,7 @@ select.button_style {
 
 #identity{
   margin-bottom: 100px;
-  font-size: 190%;
+  font-size: 42px;
 }
 
 
@@ -97,5 +97,10 @@ select.button_style {
 
 #to-select{
   background: #65e3af;
-  padding-bottom: 30px;
+  padding-bottom: 80px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  left: 0px;
+  right: 0px;
 }
