--- a/web/app/templates/pages.html
+++ b/web/app/templates/pages.html
@@ -27,7 +27,8 @@ This is me trying to fool around with that and build something.
     <div id="group2" class="parallax__group">
       <div class="parallax__layer parallax__layer--base">
         <div >
-	         <div class="title">Another Page</div>
+	        <!-- <div class="title">Another Page</div> -->
+          {% include 'timeline.html' %}
 
         </div>
       </div>
