started the main page

--- a/web/app/templates/selection.html
+++ b/web/app/templates/selection.html
@@ -4,10 +4,10 @@
 	<link rel="stylesheet" href="../static/css/selection.css">
 	<script src="../static/js/selection.js"></script>
 </head>
-<body onload="init()">
+<body onload="selection_init()">
 
 	<div id="identity">
-		<span id="iam">I am a... </span><span id="list"/>
+		<span id="iam">I am... </span><span id="list"/>
 	</div>
 	<div id="to-select">
 		<form action="#">
