--- a/web/app/templates/timeline.html
+++ b/web/app/templates/timeline.html
@@ -13,7 +13,7 @@
 	});
 	</script>
 </head>
-<body onload="init()">
+<body onload="timeline_init()">
 
 	<div id = "timeline">
 		<span id="dateDisplayer">0</span>
