--- a/web/app/templates/heatmap.html
+++ b/web/app/templates/heatmap.html
@@ -63,7 +63,8 @@
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script>
-var data = {{ data|safe }};
+//var data = {{ data|safe }};
+var data = [];
 
 function point_in_polygon(point, vs) {
     // ray-casting algorithm based on
