more progress on main page

--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -10,9 +10,7 @@ This is me trying to fool around with that and build something.
 <html>
 <head>
 	<title>Stop and Frisk</title>
-	<!--<script src="../static/js/layout.js"></script>-->
-  <script type="text/javascript" src="{{ url_for('static', filename='layout.js') }}"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='selection.js') }}"></script>
+	<script src="../static/js/layout.js"></script>
 	<link rel="stylesheet" href="../static/css/layout.css">
 </head>
 <body>
@@ -20,15 +18,16 @@ This is me trying to fool around with that and build something.
   <div id="selection_div" class="page_div">
      {% include 'selection.html' %}
   </div>
-  <div id="timeline_div" class="page_div">
+  <div id="heatmap_div">
+    {% include 'heatmap.html' %}
+  </div>
+  <div id="timeline_div">
     {% include 'timeline.html' %}
   </div>
   <div id="timeline-graph_div">
     {% include 'timeline-graph.html' %}
   </div>
-  <div id="heatmap_div">
-    {% include 'heatmap.html' %}
-  </div>
+  
 </div>
 </body>
 </html>
