--- a/web/app/templates/timeline.html
+++ b/web/app/templates/timeline.html
@@ -13,7 +13,7 @@
 	});
 	</script>
 </head>
-<body onload="timeline_init()">
+<body>
 
 	<div id = "timeline">
 		<span id="dateDisplayer">0</span>
@@ -21,26 +21,9 @@
 		<span id="maxDate">2014</span>
 		<input type="range" id="datePicker" onchange="changeDate(this.value)" />
 		<div id = "timepieces">
-		<!--<a href="pages.html" class="tooltip"><div class="timepiece"></div><span>
-			<img class="callout" src="../static/img/callout.gif" />
-			<strong>Most Light-weight Tooltip</strong><br />
-			This is the easy-to-use Tooltip driven purely by CSS.
-		</span></a>-->
 	</div>
 	</div>
 
-	
-
-
-
-	<!--First tooltip-
-	<a href="#" class="tooltip">
-		Tooltip
-		<span>
-			<img class="callout" src="../static/img/callout.gif" />
-			<strong>Most Light-weight Tooltip</strong><br />
-			This is the easy-to-use Tooltip driven purely by CSS.
-		</span>
-	</a>-->
+	<script>timeline_init()</script>
 </body>
 </html>
