layout basically complete

--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -18,7 +18,7 @@ This is me trying to fool around with that and build something.
   <div id="selection_div" class="page_div">
      {% include 'selection.html' %}
   </div>
-  <div id="heatmap_div">
+  <div id="heatmap_div" class="center">
     {% include 'heatmap.html' %}
   </div>
   <div id="timeline_div">
