--- a/web/app/static/css/layout.css
+++ b/web/app/static/css/layout.css
@@ -1,8 +1,22 @@
+@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+
+html{
+	font-family: 'Open Sans';
+}
+
 .page_div{
-  height: 900px;
+  height: 100vh;
 }
 
 #heatmap_div{
 	margin-left: auto;
 	margin-right: auto;
+	width: 77%;
+	margin-top: 50px;
+}
+
+#timeline-graph_div{
+	margin-left: auto;
+	margin-right: auto;
+	width: 87%;
 }
