--- a/web/app/static/css/selection.css
+++ b/web/app/static/css/selection.css
@@ -1,7 +1,3 @@
-html{
-  font-family: 'Open Sans';
-}
-
 fieldset {
   border: 0;
 }
@@ -85,7 +81,6 @@ select.button_style {
 }*/
 
 #identity{
-  margin-bottom: 100px;
   font-size: 42px;
 }
 
@@ -94,6 +89,15 @@ select.button_style {
   border-top: 1px dotted #888;
   border-bottom: 1px dotted #888;
 }*/
+
+#selection_content{
+    padding: 150px;
+    padding-top: 200px;
+}
+
+#selectables{
+  padding-left: 150px;
+}
 
 #to-select{
   background: #65e3af;
