--- a/web/app/templates/selection.html
+++ b/web/app/templates/selection.html
@@ -6,10 +6,13 @@
 </head>
 <body onload="selection_init()">
 
+	<div id="selection_content">
+
 	<div id="identity">
 		<span id="iam">I am... </span><span id="list"/>
 	</div>
 	<div id="to-select">
+		<div id="selectables">
 		<form action="#">
 
 			<fieldset>
@@ -46,6 +49,8 @@
 
 		</form>
 	</div>
+	</div>
+</div>
 
 </body>
 </html>
