--- a/web/app/templates/timeline-graph.html
+++ b/web/app/templates/timeline-graph.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" href="../static/css/timeline-graph.css">
 	<script src="../static/js/timeline-graph.js"></script>
-	<script src="http://d3js.org/d3.v3.js"></script>
+<!--	<script src="http://d3js.org/d3.v3.js"></script> -->
 	<script src="http://d3js.org/queue.v1.min.js"></script>
 
 	<style>
