--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -20,6 +20,7 @@ This is me trying to fool around with that and build something.
   </div>
   <div id="heatmap_div" class="center">
     {% include 'heatmap.html' %}
+    <button style="display:none" id="animate_button" type="button" class="button_style" onclick="animateTimeline()">Animate</button>
   </div>
   <div id="timeline_div">
     {% include 'timeline.html' %}
