--- a/web/app/static/css/selection.css
+++ b/web/app/static/css/selection.css
@@ -100,7 +100,12 @@ select.button_style {
 }
 
 #to-select{
-  background: #65e3af;
+  /*background: #65e3af;*/
+
+  box-shadow: 0px -3px 30px rgba(34,34,34,0.6);
+
+
+  background: #7f7f7f;
   padding-bottom: 120px;
   position: absolute;
   bottom: 0px;
