--- a/web/app/static/css/timeline.css
+++ b/web/app/static/css/timeline.css
@@ -32,10 +32,10 @@ a.tooltip span
 
 .timepiece{
 	display: inline-block;
-	background: #e1a34b;
+	background: #6BAED6;
 	width: 10px;
 	height: 10px;
-	border: #fff solid 2px;
+	border: #DEEBF7 solid 2px;
 	border-radius: 50%;
 	transition: all .17s ease-in-out;
 	/*float:left;*/
@@ -84,19 +84,23 @@ input[type=range]{
 input[type=range]::-webkit-slider-runnable-track {
 	width: 300px;
 	height: 8px;
-	background: #c47b3a;
+	/*background: #c47b3a;*/
+	background: #6BAED6;
 	border: none;
-	border-top: 4px solid #853f01;
+	/*border-top: 4px solid #853f01;*/
+	border-top: 4px solid #08519C;
 }
 
 input[type=range]::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	border: none;
-	border-bottom: thick solid #d77218;
+	/*border-bottom: thick solid #d77218;*/
+	border-bottom: thick solid #4292C6;
 	height: 20px;
 	width: 32px;
 
-	background: goldenrod;
+	/*background: goldenrod;*/
+	background: #C6DBEF;
 	margin-top: -10px;
 }
 
@@ -105,5 +109,6 @@ input[type=range]:focus {
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-	background: #c47b3a;
+	/*background: #c47b3a;*/
+	background: #4292C6;
 }
