--- a/web/app/templates/heatmap.html
+++ b/web/app/templates/heatmap.html
@@ -40,19 +40,19 @@
 
 .background {
   /*fill: red;*/
-  fill: white;
+  fill: gray;
   pointer-events: all;
 }
 
-.missing {fill:rgb(172, 147, 53);}
-.q0-10 { fill:rgb(205, 205, 205); }
-.q1-10 { fill:rgb(222,235,247); }
-.q2-10 { fill:rgb(198,219,239); }
-.q3-10 { fill:rgb(158,202,225); }
-.q4-10 { fill:rgb(107,174,214); }
-.q5-10 { fill:rgb(66,146,198); }
-.q6-10 { fill:rgb(33,113,181); }
-.q7-10 { fill:rgb(8,81,156); }
+.missing {fill:gray;}
+.q0-10 { fill:rgb(205, 205, 205); } 
+.q1-10 { fill:rgb(222,235,247); } /* DEEBF7 */
+.q2-10 { fill:rgb(198,219,239); } /* C6DBEF */
+.q3-10 { fill:rgb(158,202,225); } /* #9ECAE1 */
+.q4-10 { fill:rgb(107,174,214); }  /* 6BAED6 */
+.q5-10 { fill:rgb(66,146,198); } /* 4292C6 */
+.q6-10 { fill:rgb(33,113,181); } /* 2171B5 */
+.q7-10 { fill:rgb(8,81,156); } /* 08519C */
 .q8-10 { fill:rgb(8,48,107); }
 .q9-10 {fill:rgb(0, 3, 6);}
 
