--- a/web/app/templates/heatmap.html
+++ b/web/app/templates/heatmap.html
@@ -53,7 +53,7 @@
 .q5-10 { fill:rgb(66,146,198); } /* 4292C6 */
 .q6-10 { fill:rgb(33,113,181); } /* 2171B5 */
 .q7-10 { fill:rgb(8,81,156); } /* 08519C */
-.q8-10 { fill:rgb(8,48,107); }
+.q8-10 { fill:rgb(8,48,107); }  /* 08306B */
 .q9-10 {fill:rgb(0, 3, 6);}
 
 .q0-10-key { border-color:rgb(205, 205, 205); }
