--- a/web/app/templates/timeline-graph.html
+++ b/web/app/templates/timeline-graph.html
@@ -9,14 +9,15 @@
 	<style>
 
 #graph_content {
-  font: 11px 'Open Sans';
+  font: 13px 'Open Sans';
+  font-weight: 0.5em;
+  stroke: white;
 }
 
 .axis path,
 
 .axis line {
   fill: none;
-  stroke: #000;
   shape-rendering: crispEdges;
 }
 
