--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -19,7 +19,7 @@ This is me trying to fool around with that and build something.
      {% include 'selection.html' %}
   </div>
   <div id="heatmap_div" class="center">
-    {% include 'heatmap.html' %}
+    {% include 'sf_heatmap.html' %}
   </div>
   <div id="timeline_div">
     {% include 'timeline.html' %}
@@ -27,7 +27,7 @@ This is me trying to fool around with that and build something.
   <div id="timeline-graph_div">
     {% include 'timeline-graph.html' %}
   </div>
-  
+
 </div>
 </body>
 </html>
