--- a/web/app/templates/sf_heatmap.html
+++ b/web/app/templates/sf_heatmap.html
@@ -87,58 +87,56 @@ width: 960px;
 body {
   background: black;
 }
+
 </style>
 <div id="legend">
 </div>
-<div class="heatmap">
+<div id="heatmap_svg">
 </div>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script>
-var heatmap_data = {{ sf_data|safe }};
-console.log(heatmap_data)
 
-var projection = d3.geo.mercator().center([-75.819, 42.795]).scale(6193).translate([480, 350]).precision(0);
+var heatmap_data = [];
+function getID(tract) {
+  return tract.id.slice(-8);
+}
 
 var width = 960;
 var height = 700;
 var active = d3.select(null);
 
 //Focus around NYC
+var projection = d3.geo.mercator().center([-75.819, 42.795]).scale(6193).translate([480, 350]).precision(0);
 var initialScale = 6.062866266041589;
 var initialTranslate = [-3816.2949087116212, -3586.0526348606345];
-
-//Maintain Scale & Translate for mouse
-var currentScale = initialScale;
-var currentTranslate = initialTranslate;
-var likelihood_max = 5;
 
 /*
 If projection is null, the path uses the identity transformation, where the input geometry is not projected and is instead rendered directly in raw coordinates. This can be useful for fast rendering of already-projected geometry, or for fast rendering of the equirectangular projection.
 */
 var path = d3.geo.path()
-    .projection(null);
+  .projection(null);
 
-var svg = d3.select(".heatmap").append("svg")
-    .attr("width", width)
-    .attr("height", height)
-    .on('click', stopped, true);
+var svg = d3.select("#heatmap_svg").append("svg")
+  .attr("width", width)
+  .attr("height", height)
+  .on('click', stopped, true);
 
 svg.append("rect")
-    .attr("class", "background")
-    .attr("width", width)
-    .attr("height", height)
-    .on("click", reset);
+  .attr("class", "background")
+  .attr("width", width)
+  .attr("height", height)
+  .on("click", reset);
 
 var g = svg.append('g');
 
 var zoom = d3.behavior.zoom()
-    .translate(initialTranslate)
-    .scale(initialScale)
-    .scaleExtent([1, 20])
-    .on("zoom", zoomed);
+  .translate(initialTranslate)
+  .scale(initialScale)
+  .scaleExtent([1, 20])
+  .on("zoom", zoomed);
 
 svg
   .call(zoom) // delete this line to disable free zooming
@@ -147,36 +145,30 @@ svg
 var nyShapefile = '../static/data/ny.json';
 
 var quantize = d3.scale.quantize()
-    .domain([0, 5])
-    .range(d3.range(10).map(function(i) { return "q" + i + "-10"; }));
+  .domain([0, 5])
+  .range(d3.range(10).map(function(i) { return "q" + i + "-10"; }));
 
 //Legend
 var legend = d3.select('#legend')
   .append('ul')
-    .attr('class', 'list-inline');
+  .attr('class', 'list-inline');
 
 var keys = legend.selectAll('li.key')
-    .data(quantize.range());
+  .data(quantize.range());
 
 keys.enter().append('li')
-    .attr('class', function(d){
-      return d + "-key key";
-    })
-    .style('border-top-color', String)
-    .text(function(d) {
-        var r = quantize.invertExtent(d);
-        return r[0];
-    });
-
-
+  .attr('class', function(d){
+    return d + "-key key";
+  })
+  .style('border-top-color', String)
+  .text(function(d) {
+      var r = quantize.invertExtent(d);
+      return r[0];
+  });
 
 queue()
     .defer(d3.json, nyShapefile)
     .await(ready);
-
-function getID(d) {
-  return d.id.slice(-8);
-}
 
 function ready(error, ny) {
   var tracts = ny.objects.tracts;
@@ -185,38 +177,29 @@ function ready(error, ny) {
   tracts.geometries = tracts.geometries
     .filter(function(d) { return (d.id.slice(-6) / 10000 | 0) !== 99; });
 
-
-
   g.selectAll("path")
-      .data(topojson.feature(ny, tracts).features)
+    .data(topojson.feature(ny, tracts).features)
     .enter().append("path")
-      .attr("class", function(d) {
-        var probability = heatmap_data[getID(d)] || 'N';
-        if (probability == 'N' || probability == '(X)' || probability == '-' ) {
-          return 'tract missing'
-        } else {
-          return 'tract ' + quantize(probability);
-        }
-      })
-      .attr("d", path)
-      .on("click", clicked)
-      .append("title")
-      .text(function(d, i) { return d.id + " - " + heatmap_data[getID(d)]; });
+    .attr("class", function(d) {
+      var probability = heatmap_data[getID(d)] || 'N';
+      if (probability == 'N' || probability == '(X)' || probability == '-' ) {
+        return 'tract missing'
+      } else {
+        return 'tract ' + quantize(probability);
+      }
+    })
+    .attr("d", path)
+    .on("click", clicked)
+    .append("title")
+    .text(function(d, i) { return d.id + " - " + heatmap_data[getID(d)]; });
 
   g.append("path")
-      .attr("class", "tract-border")
-      .datum(topojson.mesh(ny, tracts, function(a, b) { return a !== b; }))
-      .attr("d", path);
-}
-
-function getMouseCoords() {
-  var relative_mouse = d3.mouse(g.node());
-  return projection.invert(relative_mouse);
+    .attr("class", "tract-border")
+    .datum(topojson.mesh(ny, tracts, function(a, b) { return a !== b; }))
+    .attr("d", path);
 }
 
 function clicked(d) {
-  console.log(getMouseCoords());
-
   if (active.node() === this) return reset();
   active.classed("active", false);
   active = d3.select(this).classed("active", true);
@@ -231,27 +214,27 @@ function clicked(d) {
 
 
   svg.transition()
-      .duration(750)
-      .call(zoom.translate(translate).scale(scale).event);
+    .duration(750)
+    .call(zoom.translate(translate).scale(scale).event);
+}
 
+function getMouseCoords() {
+  var relative_mouse = d3.mouse(g.node());
+  return projection.invert(relative_mouse);
 }
 
 function reset() {
-  getMouseCoords();
-
   active.classed("active", false);
   active = d3.select(null);
 
   svg.transition()
-      .duration(750)
-      .call(zoom.translate(initialTranslate).scale(initialScale).event);
+    .duration(750)
+    .call(zoom.translate(initialTranslate).scale(initialScale).event);
 }
 
 function zoomed() {
-  currentScale = d3.event.scale;
-  currentTranslate = d3.event.translate;
-  g.style("stroke-width", 1.5 / currentScale + "px");
-  g.attr("transform", "translate(" + currentTranslate + ") scale(" + currentScale + ")");
+  g.style("stroke-width", 1.5 / d3.event.scale + "px");
+  g.attr("transform", "translate(" + d3.event.translate + ") scale(" + d3.event.scale + ")");
 }
 
 // If the drag behavior prevents the default click,
